CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
ENABLE_TESTING()

PROJECT(cryptlite)
SET(cryptlite_VERSION_MAJOR 1)
SET(cryptlite_VERSION_MINOR 0)


SET(CMAKE_CSS_FLAGS "-Wall ")
SET(CMAKE_CSS_FLAGS_DEBUG "-g")
SET(CMAKE_CSS_FLAGS_RELEASE "-O2")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(gtest)
ADD_SUBDIRECTORY(tests)
ADD_SUBDIRECTORY(examples)
