CMAKE_MINIMUM_REQUIRED(VERSION 2.8)


PROJECT(cryptlite)
SET(cryptlite_VERSION_MAJOR 1)
SET(cryptlite_VERSION_MINOR 0)

option(ENABLE_TESTING "Enable testing" OFF)
option(BUILD_EXAMPLES "build examples" OFF)


SET(CMAKE_CSS_FLAGS "-Wall ")
SET(CMAKE_CSS_FLAGS_DEBUG "-g")
SET(CMAKE_CSS_FLAGS_RELEASE "-O2")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
ENABLE_TESTING()

ADD_SUBDIRECTORY(src)
if (ENABLE_TESTING)
  ADD_SUBDIRECTORY(gtest)
  ADD_SUBDIRECTORY(tests)
endif()
if (BUILD_EXAMPLES)
  ADD_SUBDIRECTORY(examples)
endif()
